# rusty_load_balancer

./: .gitignore  Cargo.toml  Dockerfile  README.txt  cert.pem  docker-compose.yml  dockerignore  istruzioni.txt  server.py  test.py  test_load_balancer.sh
config/: config.yaml
examples/: load_test.rs
scripts/: compression.sh  setup.sh  test_load_balancer.sh  test_load_balancer_compressed.sh
src/: lib.rs  main.rs
src/backend/: healthcheck.rs  mod.rs  pool.rs  server.rs
src/cli/: mod.rs
src/config/: mod.rs
src/lb/: algorithms.rs  mod.rs
src/proxy/: handler.rs  mod.rs  request.rs  response.rs
