[package]
name = "load-balancer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
arc-swap = "1.0"
rand = "0.8"
flate2 = "1.1.5"
